# openai.c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/.cmake/Modules/: PandocMan.cmake
.github/workflows/: codeql-analysis.yml  tests.yml
cmake/Modules/: PandocMan.cmake
doc/: openai.1.md
include/: openai.h
src/: openai.c  requests.c  requests.h
test/: CMakeLists.txt  tests.c
